refactor: improve a structure
