# src/grpc-api/server/mcar/cluster.go
@@ -7,7 +7,7 @@ import (
 	"github.com/cloud-barista/cb-mcks/src/grpc-api/logger"
 	pb "github.com/cloud-barista/cb-mcks/src/grpc-api/protobuf/cbmcks"
 
-	"github.com/cloud-barista/cb-mcks/src/core/model"
+	"github.com/cloud-barista/cb-mcks/src/core/app"
 	"github.com/cloud-barista/cb-mcks/src/core/service"
 )
 
@@ -24,7 +24,7 @@ func (s *MCARService) CreateCluster(ctx context.Context, req *pb.ClusterCreateRe
 	logger.Debug("calling MCARService.CreateCluster()")
 
 	// GRPC 메시지에서 MCKS 객체로 복사
-	var mcarObj model.ClusterReq
+	var mcarObj app.ClusterReq
 	err := gc.CopySrcToDest(&req.Item, &mcarObj)
 	if err != nil {
 		return nil, gc.ConvGrpcStatusErr(err, "", "MCARService.CreateCluster()")
